# machx-inference-engine

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Hand-off.md  MASTER_DEV_PLAN.md  PLAN.md  QUICKSTART.md  README.md  RELEASE.md  THIRD_PARTY_LICENSES.md
.github/: FUNDING.yml
Visual-Diagrams/: ie_architecture.html  ie_architecture.md  ie_vs_llamacpp_2026-06-12.py  ie_vs_llamacpp_vulkan.html  llamacpp_architecture.html  llamacpp_architecture.md  seal_vs_llamacpp_vulkan.html
bench/: CMakeLists.txt  bench_attention.cpp  bench_dequant.cpp  bench_gemm_fp16.cpp  bench_gemm_slm.cpp  bench_gemv_q4k.cpp
bench/baseline/: phase0_results.md  phase1_inspect.txt  phase1_results.md  phase2_bench.txt  phase2_results.md  phase2_test.txt  phase3_elementwise.txt  phase3_gemm_slm_bench.txt  phase3_gemv_bench.txt  phase3_gemv_test.txt  phase3_results.md  phase4_attention_bench.txt  phase4_attention_test.txt  phase4_elementwise.txt  phase4_results.md  phase5_deltanet_test.txt  phase5_results.md  phase6_moe_test.txt  phase6_results.md  phase7_results.md  phase7_tokenizer_test.txt  phase8_results.md  phase8_trace.txt  phase9_results.md  phase9_trace.txt
benchmark_prompts/: 01_short_chat.txt  02_long_instruction.txt  03_codegen.txt  04_math_reasoning.txt  05_long_context.txt
docs/: BENCHMARK_METHODOLOGY.md  COMPETITIVE_SCORECARD_2026-06-25.md  HANDOFF_2026-06-20_q6kernel-tp-chunklift-publicprep.md  HANDOFF_2026-06-20_qwen35-27b-q8-and-decode-fix.md  HANDOFF_2026-06-21_gemma-decode-bw-ceiling.md  HANDOFF_2026-06-21_gemma-mtp-spec-decode.md  HANDOFF_2026-06-21_gemma4-perf-solved.md  HANDOFF_2026-06-21_memory-planner-and-bench.md  HANDOFF_2026-06-21_spec-decode-shipped-and-gemma4-perf.md  PUBLISHING_READINESS_2026-06-21.md  bench_results_phase_attn_kv_fusion_REVERTED.txt  bench_results_phase_fa2_target_super_fix.txt  bench_results_phase_ffn_gate_up_fusion.txt  bench_results_phase_gemm_q6k.txt  bench_results_phase_lm_head_q4k_REVERTED.txt  bench_results_phase_lmhead_q4k_GGUF.txt  bench_results_phase_moe_dec_down_q4k_sg_coop_REVERTED.txt  bench_results_phase_moe_down_tile.txt  bench_results_phase_moe_q6k_sg.txt  bench_results_phase_q4k_huge_REVERTED.txt  bench_results_phase_q4k_sg_coop_REVERTED.txt  bench_results_phase_q6k_post.txt  bench_results_phase_q6k_pre.txt  bench_results_phase_q6k_pre_int8.txt  bench_results_phase_q6k_sg_coop.txt  bench_results_phase_res_rms_fusion.txt  bench_results_phase_shexp_q4k_REVERTED.txt  bench_results_phase_ssm_alpha_beta_fusion.txt  bench_results_phase_step1_gemm_q4k_esimd.txt  bench_results_phase_step2_fa2_prefill.txt  bench_results_phase_v1_ship_state.txt  bench_results_phase_xlayer_res_rms_REVERTED.txt  benchmark_matrix_2026-06-09.md  benchmark_results_2026-06-22.md  benchmarks.html  big_model_roadmap_2026-06-26.md  bisect_chunking_validator.txt  bisect_step10_forward_chunk_REVERTED.txt  bisect_step25_26_summary.md  bisect_step25_usm_host_state.md  (+30 more)
examples/: CMakeLists.txt  hello_gpu.cpp
src/: CMakeLists.txt
src/cli/: main.cpp
src/core/: allocator.cpp  deltanet_state.cpp  dtype.cpp  exl3_decode.cpp  fleet_prefix_cache.cpp  kv_cache.cpp  prefix_cache.cpp  tensor.cpp
src/engine/: engine.cpp
src/loaders/: awq.cpp  gguf_reader.cpp  gguf_writer.cpp  hf_import.cpp  memory_plan.cpp  model_config.cpp  quantize_q4k.cpp  quantize_q6k.cpp  safetensors_reader.cpp
src/model/: dense_dispatch.hpp  dense_split.cpp  dense_tp.cpp  dense_transformer.cpp  gemma4.cpp  gemma4_assistant.cpp  gptoss.cpp  gptoss_tp.cpp  qwen35_dense.cpp  qwen35_split.cpp  qwen35_tp.cpp  qwen35moe_split.cpp  qwen36.cpp  qwen3moe.cpp  qwen3moe_pack.cpp  qwen3moe_split.cpp  qwen3moe_tp.cpp  qwen3next.cpp
src/ops/: attention.cpp  conv1d.cpp  deltanet.cpp  dequant_kernels.cpp  elementwise.cpp  embedding.cpp  gemm_fp16.cpp  gemm_onednn.cpp  gemm_onednn_stub.cpp  gemm_q4k_esimd.cpp  gemm_q4k_xmx.cpp  gemv_exl3.cpp  gemv_fp16.cpp  gemv_mxfp4.cpp  gemv_q4_0.cpp  gemv_q4_soa.cpp  gemv_q4k.cpp  gemv_q6_soa.cpp  gemv_q6k.cpp  gemv_q8dot.cpp  hadamard.cpp  moe.cpp  moe_fused.cpp  moe_gemma4.cpp  moe_q8.cpp  moe_qwen3.cpp  sampling.cpp
src/server/: openai_proto.cpp  openai_server.cpp
src/tokenizer/: tokenizer.cpp
tests/: CMakeLists.txt  awq_dequant_test.cpp  dense_forward_smoke.cpp  dense_unpermute_test.cpp  gemv_fp16_test.cpp  gemv_q6k_ktiled_test.cpp  gguf_writer_test.cpp  hf_import_test.cpp  model_config_test.cpp  mxfp4_dequant_test.cpp  quantize_q6k_test.cpp  safetensors_reader_test.cpp  tokenizer_qwen3_golden_test.cpp
tests/data/exl3/: README.md  onelayer.meta.json
tests/integration/: engine_generate_test.cpp  server_smoke.sh
tests/unit/: arch_template_test.cpp  attention_test.cpp  dbrx_pretok_test.cpp  deltanet_test.cpp  dequant_bt_test.cpp  dequant_test.cpp  elementwise_test.cpp  engine_util_test.cpp  esimd_block2d_smoke_test.cpp  exl3_decode_test.cpp  gemv_q4_0_test.cpp  gemv_q4k_test.cpp  mistral_template_test.cpp  moe_test.cpp  openai_proto_test.cpp  q8dot_test.cpp  quant_soa_test.cpp  qwen3moe_pack_test.cpp  sampler_test.cpp  tekken_tokenizer_test.cpp  tokenizer_test.cpp
tools/: CMakeLists.txt  bench5.sh  diff_layers.sh  dump_embedding.cpp  forward_test.cpp  gemma4_assistant_load_test.cpp  gemma4_gen.cpp  gemma4_load_test.cpp  gemma4_ppl.cpp  gemma4_tok_test.cpp  gemv_q4_0_batched_bench.cpp  gptoss_load_test.cpp  ie_attn_profile.cpp  ie_bench.cpp  ie_bench_suite.cpp  ie_bug_live.cpp  ie_bug_monitor.cpp  ie_debug.cpp  ie_dense_dump.cpp  ie_det_probe.cpp  ie_exl3_test.cpp  ie_gemma4_spec.cpp  ie_gptoss_tp_bench.cpp  ie_import.cpp  ie_kernel_monitor.cpp  ie_kv_scale.cpp  ie_partial_stack_eval.cpp  ie_perplexity.cpp  ie_prefix_cache_e2e.cpp  ie_prefix_cache_test.cpp  ie_prompt_bench.cpp  ie_qwen35_mtp_accept.cpp  ie_qwen35_spec.cpp  ie_qwen35moe_bench.cpp  ie_qwen36_spec.cpp  ie_spec_engine_ab.cpp  inspect_gguf.cpp  kmap.sh  llama_dump.cpp  multi_gpu_equality_test.cpp  (+17 more)
tools/exl3/: make_oracle.py
tools/igc_repro/: README.md  dn_fma_nondet_repro.cpp
tools/perf/: PERF_LEDGER.md  benchscope_export.py  ledger.py  roofline.py  sample_capture.json  viz.py
(+106 files in other folders)
